--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.servlet.context-path=/crud
 spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
+spring.mvc.date-format=yyyy-MM-dd
+spring.mvc.hiddenmethod.filter.enabled=true
